fixed bug - overflow

--- a/client/src/components/Reply.css
+++ b/client/src/components/Reply.css
@@ -24,6 +24,7 @@
 
 .reply_body{
   margin: 10px 5px 10px 5px;
+  overflow-wrap: break-word;
 }
 
 .reply_like{
